2014-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* obsolete/cc-compat.el: Make obsolete (bug#18561).

	* epg-config.el (epg-gpg-program): Don't use absolute names by default.

	* emacs-lisp/bytecomp.el (=, <, >, <=, >=): Don't optimize multi-arg
	case (bug#18767).

2014-10-21  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to version 24.4 release.

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (=, <, >, <=, >=): Don't optimize multi-arg
	case (bug#18767).

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.

2014-10-20  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-backend.el
	(newsticker--image-download-by-url-callback): Make this function
	actually work: Check status properly, then save image.

2014-10-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/css-mode.el (scss-mode): New major-mode.
	(css-mode-syntax-table): Use d style comment, to ease the scss case.
	(css-ident-re): Allow things like @-moz-keyframes.
	(scss--hash-re): New const.
	(css--font-lock-keywords): New function, extracted from
	css-font-lock-keywords.

2014-10-19  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-backend.el: Require url-parse.
	(newsticker--get-news-by-wget): Store feed name as process property.
	(newsticker--sentinel): Read feed name from process property.
	(newsticker--sentinel-work): Rename argument name to feed-name.
	Rename variable imageurl to image-url.  Pick icon url from Atom
	1.0 data.  Launch download of feed icon.
	(newsticker--get-icon-url-atom-1.0): New.
	(newsticker--unxml)
	(newsticker--unxml-node)
	(newsticker--unxml-attribute): Documentation.
	(newsticker--icons-dir): New.
	(newsticker--image-get): New arguments FILENAME and DIRECTORY.
	Use `url-retrieve' if `newsticker-retrieval-method' is 'intern.
	(newsticker--image-download-by-wget): New.  Use process properties
	for storing informations.
	(newsticker--image-sentinel): Read informations from process properties.